test/fails/bad_generics/bounds2.lgl
with int T: declare T +(T x, T y);
with float T: declare T +(T x, T y);

// Note that t cannot be a bool, so `t should be a genTyp
with int T: T add_op(T x, T y) {
    return x + y;
}

void main() {
    auto fail = add_op<float>(1., 2.);
}